--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Eufy Security Add-on",
+  "name": "Eufy Security Add-on (CUSTOM)",
   "version": "1.0.0-rc.1",
   "slug": "eufy_security_addon",
   "description": "eufy_security_addon add-on eufy security websocket",
